--- a/docker-compose.dist.yml
+++ b/docker-compose.dist.yml
@@ -2,13 +2,13 @@ web:
     image: shincoder/homestead:php7.3
     restart: unless-stopped
     ports:
-        - "8000:80" # web
+        - "80:80" # web
         - "2222:22" # ssh
     volumes:
         - ~/.composer:/home/homestead/.composer # composer caching
         - ~/.gitconfig:/home/homestead/.gitconfig # Git configuration ( access alias && config )
         - ~/.ssh:/home/homestead/.ssh # Ssh keys for easy deployment inside the container
-        - ~/apps:/apps # all apps
+        - ./apps:/apps # all apps
         - ~/apps/volumes/nginx/sites-available:/etc/nginx/sites-available # nginx sites ( in case you recreate the container )
         - ~/apps/volumes/nginx/sites-enabled:/etc/nginx/sites-enabled # nginx sites ( in case you recreate the container )
         - ~/volumes/nginx/ssl:/etc/nginx/ssl
